Bug 105583 - [CI] igt@gem_eio@in-flight-suspend - dmesg-warn - *ERROR* timeout waiting for GT wells to go off
Summary: [CI] igt@gem_eio@in-flight-suspend - dmesg-warn - *ERROR* timeout waiting for...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: Other All
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: ReadyForDev
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-19 07:13 UTC by Marta Löfstedt
Modified: 2018-05-22 20:46 UTC (History)
1 user (show)

See Also:
i915 platform: BSW/CHT, BYT
i915 features: GEM/Other


Attachments

Comment 1 Chris Wilson 2018-03-19 13:30:01 UTC
Looks like it still occurs with

commit ac697ae8013a7c7301174c9c3b02a92fe418b7ea
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Mar 15 15:10:15 2018 +0000

    drm/i915: Stop engines when declaring the machine wedged

so time to accept the failure and turn off the DRM_ERROR.
Comment 2 Chris Wilson 2018-05-03 09:09:25 UTC
commit e01569ab962145b2fb46f6240bf1f07ec3a6261a
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Apr 9 10:49:05 2018 +0100

    drm/i915: Silence debugging DRM_ERROR for failing to suspend vlv powerwells
    
    If we try to suspend a wedged device following a GPU reset failure, we
    will also fail to turn off the rc6 powerwells (on vlv), leading to a
    *ERROR*. This is quite expected in this case, so the best we can do is
    shake our heads and reduce the *ERROR* to a debug so CI stops
    complaining.
    
    Testcase: igt/gem_eio/in-flight-suspend #vlv
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=105583
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
    Cc: Imre Deak <imre.deak@intel.com>
    Cc: Ville Syrjälä <ville.syrjala@linux.intel.com>
    Acked-by: Jani Nikula <jani.nikula@intel.com>
    Link: https://patchwork.freedesktop.org/patch/msgid/20180409094905.4516-1-chris@chris-wilson.co.uk
Comment 4 Chris Wilson 2018-05-10 14:12:20 UTC
(In reply to Martin Peres from comment #3)
> This has not stopped happening. Here are the latest failures:
> 
> https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_30/fi-byt-n2820/
> igt@gem_eio@in-flight-suspend.html
> 
> https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_30/fi-bsw-n3050/
> igt@gem_eio@in-flight-suspend.html

But that kernel was from before the fix was applied.
Comment 5 Martin Peres 2018-05-22 20:46:45 UTC
(In reply to Chris Wilson from comment #4)
> (In reply to Martin Peres from comment #3)
> > This has not stopped happening. Here are the latest failures:
> > 
> > https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_30/fi-byt-n2820/
> > igt@gem_eio@in-flight-suspend.html
> > 
> > https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_30/fi-bsw-n3050/
> > igt@gem_eio@in-flight-suspend.html
> 
> But that kernel was from before the fix was applied.

Not being seen after these failures, you were right! Thanks and sorry!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.